--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         
         <div class="messages">
-            <p>Parrafo ejemplo</p>
+            <p>Vidas: <span id="lives"></span></p>
         </div>
     </div>
 
