--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         </div>
         
         <div class="messages">
-            <p>Vidas: <span id="lives"></span></p>
+            <p>Lives: <span id="lives"></span></p>
+            <p>Time: ⏰ <span id="time"></span></p>
         </div>
     </div>
 
