've added the reload btn

--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
 
         
         <div class="btns">
-            <button id="up">Arriba</button>
-            <button id="left">Izquierda</button>
-            <button id="right">Derecha</button>
-            <button id="down">Abajo</button>
+            <button id="up">Up ☝🏼</button>
+            <button id="left">Left 👈🏼</button>
+            <button id="right">Right 👉🏼</button>
+            <button id="down">Down 👇🏼</button>
+        </div>
+        <div class="btns">
+            <button id="reload">Reload 🔄</button>
         </div>
         
         <div class="messages">
             <p>Lives: <span id="lives"></span></p>
             <p>Time: ⏰ <span id="time"></span></p>
-            <p>Record: 🏁 <span id="record"></span></p>
+            <p>Your Record: 🏁 <span id="record_time"></span></p>
             <p id="result"></p>
         </div>
     </div>
