--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="messages">
             <p>Lives: <span id="lives"></span></p>
             <p>Time: ⏰ <span id="time"></span></p>
-            <p>Your Record: 🏁 <span id="record_time"></span></p>
+            <p>Your Record: 🏁 <span id="record"></span></p>
             <p id="result"></p>
         </div>
     </div>
